# brainvisa-spm

./: CMakeLists.txt  README.md  info.py
brainvisa/toolboxes/spm/: spm.py
brainvisa/toolboxes/spm/hierarchies/brainvisa-3.0/: MRI_spm.py
brainvisa/toolboxes/spm/hierarchies/brainvisa-3.1.0/: MRI_spm.py
brainvisa/toolboxes/spm/hierarchies/brainvisa-3.2.0/: MRI_spm.py  spm_stats.py
brainvisa/toolboxes/spm/processes/: category_documentation.minf
brainvisa/toolboxes/spm/processes/import/: createAnalysis.py  createCovariateTable.py  createSubjectGroup.py  importT1mriTemplate.py  manageSubjectGroup.py
brainvisa/toolboxes/spm/processes/spm12/spatial/: SPM12CoregisterEandR_generic.py  SPM12CoregisterEstimate.py  SPM12CoregisterEstimate_generic.py  SPM12NormaliseEandW_generic.py  SPM12NormaliseWrite_generic.py  SPM12OldNormaliseEandW_generic.py  SPM12OldNormaliseEstimate_generic.py  SPM12OldNormaliseWrite_generic.py  SPM12RealignEandR_generic.py  SPM12Segment.py  (+2 more)
brainvisa/toolboxes/spm/processes/tools/: SPMcovariateManager.py  SPMtissuesvolume.py  computeOneTissueMask.py  computeTissueMask.py  deformationsSequences.procdoc  deformationsSequences.py  extractFileListFromGroup.py  labelFilteredImages.py  realignOffsetMeasurement.py
brainvisa/toolboxes/spm/types/: MRI_spm.py  spm_stats.py
cmake/: brainvisa-spm-config.cmake.in
python/soma/spm/: csv_converter.py  custom_decorator_pattern.py  spm_batch_maker_utils.py  spm_container.py  spm_launcher.py  spm_main_module.py  xls_converter.py
soma-dev/: soma-recipe.yaml
soma-env/: soma-env-recipe.yaml
(+279 files in other folders)
